--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -27,6 +27,7 @@
         android:layout_height="75dp"
         android:layout_margin="25dp"
         android:layout_marginTop="25dp"
+        android:backgroundTint="#E91E63"
         android:text="@string/events_Button"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -40,7 +41,7 @@
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:layout_margin="25dp"
-        android:layout_marginTop="68dp"
+        android:backgroundTint="#9C27B0"
         android:text="@string/reports"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -54,16 +55,21 @@
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:layout_marginBottom="35dp"
+        android:backgroundTint="#FF5722"
         android:text="@string/logout_Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_LP_admin"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button_LP_vehicles"
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:layout_marginTop="25dp"
+        android:backgroundTint="#3F51B5"
         android:text="@string/vehicles"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,9 +82,25 @@
         android:layout_height="84dp"
         android:layout_marginTop="35dp"
         android:text="@string/bitmile_LP_Title"
-        android:textSize="50sp"
         android:textAlignment="center"
+        android:textColor="#673AB7"
+        android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_LP_admin"
+        android:layout_width="150dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="25dp"
+        android:backgroundTint="@android:color/holo_green_dark"
+        android:text="@string/admin_stuff"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_LP_vehicles"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
