Updated color scheme and added background to landing page

--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -4,30 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bluegradient"
     tools:context=".LandingPage">
+
 
     <TextView
         android:id="@+id/welcome_Username"
-        android:layout_width="294dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="25dp"
+        android:layout_width="407dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="84dp"
         android:fontFamily="sans-serif"
         android:text="@string/welcome_username"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appName_LP" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_LP_events"
         android:layout_width="150dp"
         android:layout_height="75dp"
-        android:layout_margin="25dp"
-        android:layout_marginTop="25dp"
-        android:backgroundTint="#E91E63"
+        android:layout_margin="35dp"
+        android:backgroundTint="#002949"
         android:text="@string/events_Button"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -41,7 +41,7 @@
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:layout_margin="25dp"
-        android:backgroundTint="#9C27B0"
+        android:backgroundTint="#004B87"
         android:text="@string/reports"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -55,8 +55,9 @@
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:layout_marginBottom="35dp"
-        android:backgroundTint="#FF5722"
+        android:backgroundTint="#0091FF"
         android:text="@string/logout_Button"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -69,32 +70,19 @@
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:layout_marginTop="25dp"
-        android:backgroundTint="#3F51B5"
+        android:backgroundTint="#006FC6"
         android:text="@string/vehicles"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_LP_reports" />
 
-    <TextView
-        android:id="@+id/appName_LP"
-        android:layout_width="194dp"
-        android:layout_height="84dp"
-        android:layout_marginTop="35dp"
-        android:text="@string/bitmile_LP_Title"
-        android:textAlignment="center"
-        android:textColor="#673AB7"
-        android:textSize="50sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/button_LP_admin"
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:layout_marginTop="25dp"
-        android:backgroundTint="@android:color/holo_green_dark"
+        android:backgroundTint="#008FFF"
         android:text="@string/admin_stuff"
         android:textAlignment="center"
         android:textSize="18sp"
